--- a/sass/theme/_front_page.scss
+++ b/sass/theme/_front_page.scss
@@ -208,7 +208,7 @@ section.classes {
 }
 
 section.blog {
-	padding-top: 0px;
+	padding-top: 0px !important;
 	color: black;
 	margin-bottom: 100px;
     
