--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -36,6 +36,16 @@ h1.large-header {
   margin: $container-padding;
 }
 
+section#gallery-coa {
+  margin: 20px 0px;
+
+  div.vertical-line {
+    border-right: 1px solid #9b9b9b;
+    opacity: 0.25;
+    margin: 30px 0px;
+  }
+}
+
 .gallery-banner {
   position: relative;
   height: 600px;
