--- a/sass/theme/_front_page.scss
+++ b/sass/theme/_front_page.scss
@@ -14,14 +14,6 @@ body.home {
 section.shows {
 	padding-top: 40px !important;
 
-	div#shows-header-text {
-		//background: rgba(0, 0, 0, 0.6);
-		//background-color: black;
-		//color: white;
-		border-top: 1px solid black;
-		//border-bottom: 1px solid white;
-	}
-
     .body-shows {
 
         .featured-show {
@@ -175,7 +167,10 @@ section.classes {
     }
 
 	.card {
-		width: 472px;
+		@include media-breakpoint-up(md) {
+			width: 472px;
+		}
+
 		margin: 0 auto;
 
 		.card-image {
