--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10311,11 +10311,17 @@ section#gallery-coa {
   top: 8px;
   left: 16px; }
 
-div#blog-pagination {
-  width: 70%;
-  margin: 40px auto; }
-  div#blog-pagination a {
-    font-size: 20px; }
+@media (min-width: 768px) {
+  div#blog-pagination {
+    width: 70%;
+    margin: 40px auto; } }
+
+@media (max-width: 767.98px) {
+  div#blog-pagination {
+    margin: 20px auto; } }
+
+div#blog-pagination a {
+  font-size: 20px; }
 
 .single-blog-title {
   font-size: 4rem;
