--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10209,8 +10209,16 @@ section.classes {
 
 .current-gallery {
   background: #ebeeef; }
+  @media (min-width: 576px) {
+    .current-gallery div.current-gallery-container {
+      height: 600px; } }
+  @media (max-width: 575.98px) {
+    .current-gallery div.current-gallery-container {
+      height: 300px; } }
   .current-gallery img.current-gallery-image {
     object-fit: cover;
+    height: 100%;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10404,7 +10412,8 @@ div#blog-pagination a {
   div.list-template-page div.template-item {
     max-height: 450px; }
     div.list-template-page div.template-item img {
-      height: 100%; } }
+      height: 100%;
+      max-height: 400px; } }
 
 div.list-template-page div.list-wrapper:nth-child(odd) {
   background: #f6f6f6; }
