--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -62,6 +62,13 @@ body {
 /* Uncatagorized */
 // TODO: catagorize these
 
+//.square-content:before{
+//	content: "";
+//	display: block;
+//	padding-top: 100%; 	/* initial ratio of 1:1*/
+//}
+
+
 .wrapper {
     padding: 0;
     position: relative;
