--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10402,8 +10402,8 @@ div#blog-pagination a {
   text-transform: uppercase; }
 
 .textured-blerg {
-  background-image: url(../img/tvp-halftone-top-left-gray.png);
-  opacity: 100%; }
+  background-image: url("../img/top-texture.png") !important;
+  opacity: .2 !important; }
 
 .share-call {
   font-family: BebasNeue;
