adding a go at universal styles for mobile friendliness? may just take out if it isn't useful

--- a/sass/theme/_single_blog_page.scss
+++ b/sass/theme/_single_blog_page.scss
@@ -42,7 +42,7 @@
     text-align: center;
     padding: 1rem 0;
 
-    strong {
+    b, strong {
       font-family: BebasNeue;
       color: $primary;
     }
