--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10371,7 +10371,7 @@ div#blog-pagination a {
     font-size: 42px;
     text-align: center;
     padding: 1rem 0; }
-    .blog-contents h2 strong {
+    .blog-contents h2 b, .blog-contents h2 strong {
       font-family: BebasNeue;
       color: #D41C53; }
   .blog-contents h3 {
@@ -10491,11 +10491,40 @@ body {
   background-color: #FFF;
   box-sizing: border-box; }
 
-.site h1, h2, h3, h4, h5, h6 {
+.site h1, .site h2, .site h3, .site h4, .site h5, .site h6 {
   font-size: inherit;
   font-weight: inherit;
   margin: 0;
   line-height: 1; }
+
+.site h1 {
+  font-family: BebasNeue;
+  font-size: 72px; }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .site h1 {
+      font-size: 54px; } }
+  @media (max-width: 767.98px) {
+    .site h1 {
+      font-size: 48px; } }
+
+.site h2 {
+  font-family: BebasNeueLight;
+  font-size: 56px; }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .site h2 {
+      font-size: 48px; } }
+  @media (max-width: 767.98px) {
+    .site h2 {
+      font-size: 36px; } }
+
+.site h3 {
+  font-size: 48px; }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .site h3 {
+      font-size: 36px; } }
+  @media (max-width: 767.98px) {
+    .site h3 {
+      font-size: 24px; } }
 
 /* Uncatagorized */
 .wrapper {
