adding calendarcustomizations from mycalendar poc

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -10,6 +10,7 @@
 @import "single_blog_page";
 @import "content_page";
 @import "list_template.scss";
+@import "calendar_customizations.scss";
 
 /* Fonts */
 
