--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10463,6 +10463,28 @@ div.list-template-page div.square-wrapper {
     div.list-template-page div.square-wrapper .square-content p {
       font-size: .8rem; }
 
+table.my-calendar-table {
+  border-collapse: separate;
+  border-spacing: 5px; }
+  table.my-calendar-table thead th {
+    background: #D41C53 !important; }
+
+div.category-key ul li.current a {
+  background: white !important;
+  color: #D41C53 !important; }
+
+div.category-key ul li a {
+  background: #D41C53 !important;
+  color: white !important;
+  border: none !important;
+  margin: 2px;
+  border-radius: 0 !important;
+  font-family: BebasNeue,sans-serif !important;
+  font-size: 18px;
+  letter-spacing: 1px; }
+  div.category-key ul li a span {
+    display: none !important; }
+
 /* Fonts */
 @font-face {
   font-family: BebasNeue;
