--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -74,7 +74,7 @@ body {
 		}
 	}
 	h2 {
-		font-family: BebasNeueLight;
+		font-family: BebasNeue;
 		font-size: 56px;
 		@include media-breakpoint-only(md) {
 			font-size: 48px;
