--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -14,7 +14,7 @@ $primary: #D41C53;
 $accent: #96C0CE;
 $lightgray: #EBEEEF;
 $midgray: #C5C2D2;
-$darkgray: #4A4A4A;
+$darkgray: #343434;
 $darkergray: #252525;
 $background: #FFF;
 $navbar-brand-height: 8rem;
